Allow codecov only in push

--- a/.drone.yml
+++ b/.drone.yml
@@ -23,6 +23,9 @@ steps:
 
 - name: coverage
   image: plugins/codecov
+  when:
+    event:
+      - push
   settings:
     token:
       from_secret: CODECOV_TOKEN
