--- a/pytest.ini
+++ b/pytest.ini
@@ -7,5 +7,5 @@
 #
 
 [pytest]
-addopts = --color=auto --cov=bdc_db --cov-report=term-missing
+addopts = --color=auto --cov=bdc_db --cov-report=term-missing -v --cov-report=xml:coverage.xml
 testpaths = tests
